asm_tests/other_testfiles/invalid_files/error37.s
.name "MORO"
.comment "MORJESTA!""MORJESTA!

kissa:
	live %12
